[package]
name = "modern-todolist-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mysql = "24.0.0"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
actix-rt = "2.8.0"
actix-cors = "0.6.4"
dotenv = "0.15.0"
